<resources>
    <string name="app_name">EasyContacts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="send">Send</string>
    <string name="delete_contact">Delete contact</string>
    <string name="delete_confirmation">Delete confirmation</string>
    <string name="delete_confirmation_description">Are you sure you want to delete this contact?</string>
    <string name="user_id">User ID</string>
    <string name="login">Login</string>
    <string name="requesting_permission">Requesting permission</string>
    <string name="requesting_permission_description">We need contacts permission, because this is contacts app ...</string>
</resources>
